Fixed weird mobile nav spacing

--- a/milestone6/style.css
+++ b/milestone6/style.css
@@ -50,7 +50,7 @@ nav ul {
     list-style-type: none;
 }
 nav ul li {
-    width: 100%
+    width: 100%;
 }
 
 .fine-print {
@@ -242,5 +242,8 @@ header {
     header {
         font-size: 1.5em;
         height: auto;
+    }
+    nav a {
+        width: 75%;
     }
 }
